--- a/courses/asteroids/pyproject.toml
+++ b/courses/asteroids/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "asteroids"
-version = "1.0"
+name = "nghiango-asteroids"
+version = "1.0.1"
 dependencies = [
     "pygame",
 ]
@@ -8,6 +8,9 @@ dependencies = [
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.packages.find]
+include = ["asteroids"]
 
 [project.scripts]
 asteroids = "asteroids:main"
